--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,25 +1,71 @@
-.bio-name {
+body {
+    color: #777777;
+    background-image: url( https://www.toptal.com/designers/subtlepatterns/patterns/qbkls.png );
+    background-repeat: repeat;
+    text-align: left;
+}
+.bkground{
+    background-color: #ffffff;
+}
+.main-body {
+    color: #777777;
+    font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+    background-color: #ffffff;
+    border-color: #dddddd;
+    overflow: auto;
+    margin: 0 auto;
+}
+.nav-link {
+    color: #777777;
+}
+.bio-nav-name {
     color: #ffffff;
     background-color: #4aaaa5;
-    float: left;
-    font-size: larger;
-    width: 250px;
-    height: 60px;
+    width: 200px;
     text-align: center;
-    font-weight: bold;
-    line-height: 60px;
-}
-.navbar-custom {
-    float: right;
-    background-color: #ffffff;
-}
-.header-bar {
-    height: 60px;
-    background-color: #ffffff;
-    border-color: #cccccc;
+    font-size: x-large;
 }
 .about-me {
     color: #4aaaa5;
     font-size: x-large;
     font-weight: bold;
+}
+.spacer-div {
+    height: 20px;
+}
+.me-pic {
+    margin-right: 15px;
+    margin-bottom: 15px;
+}
+.footer {
+    background-color: #666666;
+    color: #ffffff;
+    height: 50px;
+    line-height: 50px;
+    text-align: center;
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    margin: 0 auto;
+    border-top: 8px solid #4aaaa5;
+    font-size: x-small;
+}
+.btn-color {
+    background-color: #4aaaa5;
+    color: #ffffff;
+}
+.port-item {
+    margin: 10px;
+}
+@media screen and (max-width: 768px) {
+    /* The body's bg color will be #333 */
+    body {
+        background-color: #333;
+    }
+
+    /* The wrapper's width will be 600px */
+    .wrapper {
+        width: 600px;
+    }
 }
